--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   flutter_svg: ^2.0.7
   shared_preferences: ^2.2.0
   intl: ^0.18.1
+  syncfusion_flutter_xlsio: ^22.2.9
+  permission_handler: ^10.4.3
+  path_provider: ^2.1.0
+  open_file: ^3.3.2
+  flutter_file_dialog: ^3.0.2
 
 dev_dependencies:
   flutter_test:
